[package]
name = "agem-server"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.9.0"
sqlx = { version = "0.8.3", features = [ "runtime-tokio", "tls-native-tls", "postgres", "macros" ] }
jsonwebtoken = "9.3.1"
bcrypt = "0.17.0"

serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"

thiserror = "2.0.12"
anyhow = "1.0.95"

uuid = { version = "1.15.1", features = ["v4"] }
dotenv = "0.15.0"